--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
   background-color: #242424;
 }
 
+header {
+    text-align: center;
+}
+
 h1 {
   font-size: 2.8em;
   font-weight: 400;
@@ -28,13 +32,46 @@ h1 {
     width: 450px;
     margin: 0 auto;
     padding: 1rem;
-    text-align: center;
+}
+
+
+/* **************************************************************** */
+/* Classes */
+/* **************************************************************** */
+.alive {
+    background-color: blue;
+}
+
+.cell {
+    height: 20px;
+    width: 20px;
+}
+
+.dead {
+    background-color: red;
+}
+
+.subheading {
+  font-size: 1.2em;
+  font-weight: 400;
 }
 
 /* **************************************************************** */
-/* Logo */
+/* IDs */
 /* **************************************************************** */
-#logo_container {
+#game-container {
+    text-align: center;
+}
+
+#game-grid {
+    display: inline-grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+    gap: 12px;
+    margin: 2rem auto;
+}
+
+#logo-container {
     background-image: url('./assets/desert_life_logo.webp');
     background-size: 384px 201px;
     width: 384px;
@@ -46,7 +83,7 @@ h1 {
     border: thick solid #d3b79f;
 }
 
-#logo_text {
+#logo-text {
     position: absolute;
     bottom: -.08em;
     width: 100%;
