--- a/src/index.css
+++ b/src/index.css
@@ -7,33 +7,33 @@
 }
 
 /* **************************************************************** */
+/* Fonts */
+/* **************************************************************** */
+@font-face {
+    font-family: "Regular";   /*Can be any text*/
+    src: local("Calibri"),
+        url("./font/Calibri.ttf") format("truetype");
+}
+
+/* **************************************************************** */
 /* Element styles */
 /* **************************************************************** */
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+    font-family: Regular, sans-serif;
+    background-color: #c1c1c1;
 }
 
 header {
+    background-color: #ffddc0;
+    padding: 14px 0;
     text-align: center;
 }
 
 h1 {
-  font-size: 2.8em;
-  font-weight: 400;
-  line-height: 1.1;
+    font-size: 2.8em;
+    font-weight: 400;
+    line-height: 1.1;
 }
-
-/* **************************************************************** */
-/* React application root div */
-/* **************************************************************** */
-#root {
-    width: 450px;
-    margin: 0 auto;
-    padding: 1rem;
-}
-
 
 /* **************************************************************** */
 /* Classes */
@@ -52,15 +52,38 @@ h1 {
 }
 
 .subheading {
-  font-size: 1.2em;
-  font-weight: 400;
+    font-size: 1.2em;
+    font-weight: 400;
 }
 
 /* **************************************************************** */
 /* IDs */
 /* **************************************************************** */
 #game-container {
+    margin: 0 auto;
     text-align: center;
+    min-width: 384px;
+    width: fit-content;
+}
+
+#game-controls {
+    background-color: #333333;
+    color: #fff;
+    display: flex;
+    font-size: 1.2em;
+    justify-content: center;
+    padding: 10px;
+}
+
+#game-controls * {
+    margin: auto 6px;
+}
+
+#game-controls button {
+    border: none;
+    border-radius: 4px;
+    padding: 8px 12px;
+    cursor: pointer;
 }
 
 #game-grid {
@@ -68,24 +91,26 @@ h1 {
     grid-template-columns: repeat(15, 1fr);
     grid-template-rows: repeat(15, 1fr);
     gap: 8px;
-    margin: 2rem auto;
+    margin: 25px auto;
 }
 
 #logo-container {
     background-image: url('./assets/desert_life_logo.webp');
     background-size: 384px 201px;
+    background-position: center;
+    background-repeat: no-repeat;
     width: 384px;
     /* The bottom of the image is intentionally cropped. */
     height: 196px;
     position: relative;
     text-align: center;
-    margin: 1rem auto;
-    border: thick solid #d3b79f;
+    margin: 0 auto;
+    /* border: thick solid #ffddc0; */
 }
 
 #logo-text {
     position: absolute;
-    bottom: -.08em;
+    bottom: -.15em;
     width: 100%;
     color: #ffddc0;
     text-shadow: 0 0 .8em black;
