--- a/src/index.css
+++ b/src/index.css
@@ -46,15 +46,17 @@ h1 {
 /* **************************************************************** */
 .alive {
     background-color: lightgray;
+    border: 4px solid lightgray;
 }
 
 .cell {
-    height: 16px;
-    width: 16px;
+    height: 12px;
+    width: 12px;
 }
 
 .dead {
-    background-color: black;
+    background-color: #222222;
+    border: 4px solid #222222;
 }
 
 .float-left {
@@ -65,16 +67,11 @@ h1 {
     float: right;
 }
 
-.running-button {
-    background-color: white !important;
-    /* color: white; */
-}
-
 /* **************************************************************** */
 /* IDs */
 /* **************************************************************** */
 #game-container {
-    margin: 0 auto;
+    margin: 0 auto 10px auto;
     text-align: center;
     min-width: 384px;
     width: fit-content;
@@ -95,8 +92,9 @@ h1 {
 
 #game-controls button {
     background-color: #c1c1c1;
-    border: none;
+    border: 2px solid #c1c1c1;
     border-radius: 4px;
+    color: #222222;
     cursor: pointer;
     font-family: Calibri_bold, sans-serif;
     font-size: .85em;
@@ -104,10 +102,21 @@ h1 {
     width: 70px;
 }
 
+#game-controls button:hover {
+    border: 2px solid #222222;
+}
+
+#game-controls .running-button {
+    background-color: white;
+    border: 2px solid white;
+}
+
+#game-controls .running-button:hover {
+    border: 2px solid #222222;
+}
+
 #game-grid {
     display: inline-grid;
-    grid-template-columns: repeat(15, 1fr);
-    grid-template-rows: repeat(15, 1fr);
     gap: 8px;
     margin: 25px auto;
 }
