--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@ h1 {
     width: 12px;
 }
 
+.clear {
+    clear: both;
+}
+
 .dead {
     background-color: #222222;
     border: 4px solid #222222;
@@ -52,11 +56,28 @@ h1 {
     float: right;
 }
 
+.game-parameter-container {
+    margin: 0 auto;
+    height: fit-content;
+    width: 384px;
+}
+
+.game-parameter-container label {
+    float: left;
+    font-size: 1.1em;
+}
+
+.game-parameter-container input {
+    float: right;
+    text-align: right;
+    width: 180px;
+}
+
 /* **************************************************************** */
 /* IDs */
 /* **************************************************************** */
-#game-container {
-    margin: 0 auto 10px auto;
+#game-cells {
+    margin: 20px auto;
     text-align: center;
     min-width: 384px;
     width: fit-content;
@@ -67,6 +88,7 @@ h1 {
     color: #fff;
     display: flex;
     font-size: 1.1em;
+    margin: 20px auto;
     justify-content: center;
     padding: 10px;
 }
@@ -75,7 +97,7 @@ h1 {
     background-color: #c1c1c1;
     border: 2px solid #c1c1c1;
     border-radius: 4px;
-    color: #222222;
+    color: #333333;
     cursor: pointer;
     font-weight: 600;
     margin: auto 3px;
@@ -88,7 +110,9 @@ h1 {
 }
 
 #game-controls button:hover:enabled {
-    border: 2px solid #222222;
+    border: 2px solid #c1c1c1;
+    background-color: #333333;
+    color: #c1c1c1;
 }
 
 #game-controls .running-button {
@@ -96,18 +120,12 @@ h1 {
     border: 2px solid white;
 }
 
-#game-controls .running-button:hover {
-    border: 3px solid #333333;
-}
-
 #game-grid {
     display: inline-grid;
     gap: 8px;
-    margin: 25px auto;
 }
 
 #generation {
-    display: inline;
     margin: auto 10px auto 0px;
     width: 130px;
 }
