--- a/src/index.css
+++ b/src/index.css
@@ -63,12 +63,10 @@ h1 {
 }
 
 .game-parameter-container label {
-    float: left;
     font-size: 1.1em;
 }
 
 .game-parameter-container input {
-    float: right;
     text-align: right;
     width: 180px;
 }
@@ -123,6 +121,15 @@ h1 {
 #game-grid {
     display: inline-grid;
     gap: 8px;
+}
+
+#game-parameters {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 6px;
+    margin: 0 auto;
+    width: fit-content;
 }
 
 #generation {
