--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,74 @@ h1 {
     line-height: 1.1;
 }
 
+input[type=range] {
+    background: transparent;
+    height: 32px;
+    width: 100%;
+    -webkit-appearance: none;
+  }
+
+  input[type=range]::-moz-range-track {
+    background: #333333;
+    border: none;
+    border-radius: 12px;
+    width: 100%;
+    height: 8px;
+    cursor: pointer;
+    animate: 0.2s;
+  }
+
+  input[type=range]::-moz-range-thumb {
+    background: #c1c1c1;
+    border: 2px solid #555555;
+    border-radius: 4px;
+    height: 12px;
+    width: 24px;
+    cursor: pointer;
+  }
+
+  input[type=range]::-webkit-slider-runnable-track {
+    background: #333333;
+    border: none;
+    border-radius: 12px;
+    width: 100%;
+    height: 8px;
+    cursor: pointer;
+    animate: 0.2s;
+  }
+
+  input[type=range]::-webkit-slider-thumb {
+    background: #c1c1c1;
+    border: 2px solid #555555;
+    border-radius: 4px;
+    height: 16px;
+    width: 24px;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -4px;
+  }
+
+  input[type=range]:focus::-webkit-slider-runnable-track {
+  }
+  
+  input[type=range]::-ms-track {
+  }
+
+  input[type=range]::-ms-fill-lower {
+  }
+
+  input[type=range]::-ms-fill-upper {
+  }
+
+  input[type=range]::-ms-thumb {
+  }
+
+  input[type=range]:focus::-ms-fill-lower {
+  }
+
+  input[type=range]:focus::-ms-fill-upper {
+  }
+
 /* **************************************************************** */
 /* Classes */
 /* **************************************************************** */
@@ -69,6 +137,12 @@ h1 {
 .game-parameter-container input {
     text-align: right;
     width: 180px;
+}
+
+.slider-label {
+    font-size: .9em;
+    font-weight: 600;
+    margin: auto 0 auto 8px;
 }
 
 /* **************************************************************** */
@@ -130,6 +204,10 @@ h1 {
     gap: 6px;
     margin: 0 auto;
     width: fit-content;
+}
+
+#game-parameters > div {
+    display: flex;
 }
 
 #generation {
