--- a/src/index.css
+++ b/src/index.css
@@ -104,8 +104,8 @@ input[type=range] {
 /* **************************************************************** */
 /* This should only set the bg image. */
 .cell-alive {
-    background-color: lightgray !important; /* DEBUG: TEMP */
-    /* border: 4px solid lightgray; */
+    background-image: url('./assets/hc_mask_20.svg');
+    background-size: 20px 20px;
 }
 
 /* This should only set the size. */
