--- a/src/index.css
+++ b/src/index.css
@@ -104,27 +104,20 @@ input[type=range] {
 /* **************************************************************** */
 /* This should only set the bg image. */
 .cell-alive {
+    background-color: #333333;
     background-image: url('./assets/hc_mask_20.svg');
     background-size: 20px 20px;
 }
 
 /* This should only set the size. */
 .cell {
-    /* height: 12px; */
-    /* width: 12px; */
     height: 20px;
     width: 20px;
 }
 
-/* .cell-dead { */
-    /* background-color: #222222; */
-    /* background-color: #22222233; */
-    /* border: 4px solid #22222233; */
-/* } */
-
 /* This should only set the bg color. */
 .cell-paused {
-    background-color: #00000033;
+    background-color: #333333;
 }
 
 .clear {
@@ -172,7 +165,7 @@ input[type=range] {
 
 #game-controls {
     background-color: #333333;
-    color: #fff;
+    color: #ffffff;
     display: flex;
     font-size: 1.1em;
     margin: 20px auto;
@@ -208,8 +201,10 @@ input[type=range] {
 }
 
 #game-grid {
+    /* border: 2px solid #00000033; */
     display: inline-grid;
     gap: 8px;
+    /* padding: 8px; */
 }
 
 #game-parameters {
